some TEMPORARY changes to delivery, and made so that the scroll to top button no longer visible when full menu down

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,7 +18,7 @@ body {
   height: 100vh;
   margin: 0;
   padding: 0;
-  z-index: 0;
+  z-index: 8;
   display: flex;
   justify-content: center;
   overflow: auto;
